# ReadWrite_VIS

./: README.md
C++/: CMakeLists.txt  README.md  read_vis.cpp  read_vis.h  test.cpp  write_vis.cpp  write_vis.h
Examples/: 2BLOCKS2WAY2022_IX.VIS_T0000  2BLOCKS2WAY2022_IX.VIS_TSPEC_0000
MATLAB/: README.md  read_vis.m  test.m  write_vis.m
